--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -122,16 +122,10 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
-        10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -294,8 +288,7 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
-      0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -669,6 +662,42 @@ $target: #fff;
       &.active {
         display: block;
       }
+    }
+  }
+}
+.image-gallery {
+  background-color: #fff;
+  padding-top: 300px;
+  .scroll-img {
+    overflow: hidden;
+    position: relative;
+    height: 600px;
+    @include breakpoint(mobile) {
+      display: none;
+    }
+    .layout-content {
+      padding-top: 0;
+    }
+    .image-area {
+      display: flex;
+      gap: vw(10, $design-d);
+      width: vw(2230, $design-d);
+    }
+  }
+}
+
+.portfolio {
+  padding-bottom: 300px;
+  background-color: #fff;
+  .portfolio-title {
+    color: #537188;
+    text-align: center;
+    font-size: 50px;
+    @include breakpoint(notebook) {
+      @include font-size(D, 50px);
+    }
+    @include breakpoint(mobile) {
+      @include font-size(M, 30px);
     }
   }
 }
