--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -690,12 +690,32 @@ $target: #fff;
 .work-section{
   width: 100%;
   height: auto;
-  background-color:#fff;
+  background-color:#537188;
   .work-content-title{
-    font-size: 50px;
     text-align: center;
-    color: #537188;
-    padding: 20px 0 50px 0;
+    padding: 20px 0 100px 0;
+    a{
+      position: relative;
+      display: block;
+      width: 100%;
+      height: 100%;
+      color:#fff;
+      font-size: 80px;
+      font-weight: 700;
+        z-index: 1;
+      &::after{
+        content: 'portfolio';
+        position: absolute;
+        display: block;
+        width: 100%;
+        top: 10px;
+        left: 10px;
+        color: #537188;
+        text-shadow: -1px 0 #fff, 1px 0 #fff, 0 -1px #fff, 0 1px #fff;
+        opacity: 0.3;
+        z-index: -1;
+      }
+    }
   }
   .work-content{
     display: flex;
@@ -711,22 +731,29 @@ $target: #fff;
     }
     .work-content-right{
       width: 50%;
-      padding-left: 20px;
+      padding:0 100px 0 100px;
       color:#fff;
       .work_subtit{
+          font-size: 40px;
+          font-weight: 600;
+          padding: 20px 0;
         a{
-          color:#fff;
-          text-decoration: none;
+          background-color: salmon;
+          height: 3px;
+          display: block;
         }
-        font-size: 60px;
-        padding: 20px 0;
+        
       }
       .work_keyword{
-        font-weight:600;
-        font-size: 20px;;
+        font-size: 18px;
+        margin-bottom: 10px;
         mark{
           background-color: #e1d4bb
         }
+      }
+      .txt{
+        font-weight: 300;
+        line-height: 20px;
       }
     }
   }
