--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -354,23 +354,23 @@ $target: #fff;
       justify-content: center;
     }
     .swiper-slide:nth-child(1) {
-      background-image: url("../images/content/slide-img1.jpeg");
+      background-image: url("../assets/images/content/slide-img1.jpeg");
     }
 
     .swiper-slide:nth-child(2n) {
-      background-image: url("../images/content/slide-img2.jpg");
+      background-image: url("../assets/images/content/slide-img2.jpg");
     }
 
     .swiper-slide:nth-child(3n) {
-      background-image: url("../images/content/slide-img3.jpg");
+      background-image: url("../assets/images/content/slide-img3.jpg");
     }
 
     .swiper-slide:nth-child(4n) {
-      background-image: url("../images/content/slide-img4.jpg");
+      background-image: url("../assets/images/content/slide-img4.jpg");
     }
 
     .swiper-slide:nth-child(5n) {
-      background-image: url("../images/content/slide-img5.jpeg");
+      background-image: url("../assets/images/content/slide-img5.jpeg");
     }
 
     .swiper-button-container {
@@ -666,7 +666,7 @@ $target: #fff;
   }
 }
 .image-gallery {
-  background-color: #fff;
+  // background-color: #fff;
   padding-top: 300px;
   .scroll-img {
     overflow: hidden;
@@ -686,25 +686,25 @@ $target: #fff;
   }
 }
 
-
-.work-section{
+.work-section {
   width: 100%;
   height: auto;
-  background-color:#537188;
-  .work-content-title{
+  background-color: #537188;
+  padding-bottom: 300px;
+  .work-content-title {
     text-align: center;
     padding: 20px 0 100px 0;
-    a{
+    a {
       position: relative;
       display: block;
       width: 100%;
       height: 100%;
-      color:#fff;
+      color: #fff;
       font-size: 80px;
       font-weight: 700;
-        z-index: 1;
-      &::after{
-        content: 'portfolio';
+      z-index: 1;
+      &::after {
+        content: "portfolio";
         position: absolute;
         display: block;
         width: 100%;
@@ -717,53 +717,45 @@ $target: #fff;
       }
     }
   }
-  .work-content{
+  .work-content {
     display: flex;
     flex-direction: row;
-    .work-content-left{
-      width:50%;
-        height: auto;
-      img{
-        width:100%;
+    .work-content-left {
+      width: 50%;
+      height: auto;
+      img {
+        width: 100%;
         margin-bottom: 50px;
         background-color: salmon;
       }
     }
-    .work-content-right{
+    .work-content-right {
       width: 50%;
-      padding:0 100px 0 100px;
-      color:#fff;
-      .work_subtit{
-        
-        a{
+      padding: 0 100px 0 100px;
+      color: #fff;
+      .work_subtit {
+        a {
           display: block;
-          color:#fff;
+          color: #fff;
           font-size: 40px;
           font-weight: 600;
           padding: 20px 0;
         }
-        
       }
-      .work_keyword{
+      .work_keyword {
         font-size: 18px;
         margin-bottom: 10px;
-        mark{
-          background-color: #e1d4bb
+        mark {
+          background-color: #e1d4bb;
         }
       }
-      .txt{
+      .txt {
         font-weight: 300;
         line-height: 20px;
       }
     }
   }
 }
-
-
-
-
-
-
 
 .portfolio {
   padding-bottom: 300px;
