--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -122,10 +122,16 @@ $target: #fff;
       letter-spacing: 2px;
       font-size: 65px;
       clip: rect(0px, 70px, 75px, 0px);
-      background: linear-gradient($target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) no-repeat, linear-gradient(to right, $target, $target 0) bottom left no-repeat,
-        linear-gradient(to right, $target, $target 0) bottom left no-repeat, linear-gradient($target, $target 0) bottom right no-repeat, linear-gradient($target, $target 0) bottom right no-repeat,
-        linear-gradient($target, $target 0) top right no-repeat, linear-gradient($target, $target 0) top right no-repeat;
-      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px, 10px 2px, 10px 2px, 2px 10px, 10px 2px;
+      background: linear-gradient($target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient(to right, $target, $target 0) bottom left no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) bottom right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat,
+        linear-gradient($target, $target 0) top right no-repeat;
+      background-size: 10px 2px, 2px 10px, 2px 10px, 10px 2px, 2px 10px,
+        10px 2px, 10px 2px, 2px 10px, 10px 2px;
       color: #e1d4bb;
       padding: 5px;
       transform: translateX(0);
@@ -288,7 +294,8 @@ $target: #fff;
     width: 80px;
     border-radius: 10px;
     color: #000;
-    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08), 0px 16px 24px rgba(50, 50, 71, 0.08);
+    box-shadow: 0px 12px 12px rgba(50, 50, 71, 0.08),
+      0px 16px 24px rgba(50, 50, 71, 0.08);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
@@ -686,25 +693,24 @@ $target: #fff;
   }
 }
 
-
-.work-section{
+.work-section {
   width: 100%;
   height: auto;
-  background-color:#537188;
-  .work-content-title{
+  background-color: #537188;
+  .work-content-title {
     text-align: center;
     padding: 20px 0 100px 0;
-    a{
+    a {
       position: relative;
       display: block;
       width: 100%;
       height: 100%;
-      color:#fff;
+      color: #fff;
       font-size: 80px;
       font-weight: 700;
-        z-index: 1;
-      &::after{
-        content: 'portfolio';
+      z-index: 1;
+      &::after {
+        content: "portfolio";
         position: absolute;
         display: block;
         width: 100%;
@@ -717,53 +723,45 @@ $target: #fff;
       }
     }
   }
-  .work-content{
+  .work-content {
     display: flex;
     flex-direction: row;
-    .work-content-left{
-      width:50%;
-        height: auto;
-      img{
-        width:100%;
+    .work-content-left {
+      width: 50%;
+      height: auto;
+      img {
+        width: 100%;
         margin-bottom: 50px;
         background-color: salmon;
       }
     }
-    .work-content-right{
+    .work-content-right {
       width: 50%;
-      padding:0 100px 0 100px;
-      color:#fff;
-      .work_subtit{
-        
-        a{
+      padding: 0 100px 0 100px;
+      color: #fff;
+      .work_subtit {
+        a {
           display: block;
-          color:#fff;
+          color: #fff;
           font-size: 40px;
           font-weight: 600;
           padding: 20px 0;
         }
-        
       }
-      .work_keyword{
+      .work_keyword {
         font-size: 18px;
         margin-bottom: 10px;
-        mark{
-          background-color: #e1d4bb
+        mark {
+          background-color: #e1d4bb;
         }
       }
-      .txt{
+      .txt {
         font-weight: 300;
         line-height: 20px;
       }
     }
   }
 }
-
-
-
-
-
-
 
 .portfolio {
   padding-bottom: 300px;
