--- a/src/assets/scss/contents.scss
+++ b/src/assets/scss/contents.scss
@@ -776,79 +776,85 @@ $target: #fff;
         margin-bottom: 10px;
         mark {
           background-color: #e1d4bb;
-        cursor: pointer;
-        background: rgba(0,0,0,0.09);
-        span{
-          display: block;
-          padding: 15px 40px;
+          cursor: pointer;
+          background: rgba(0, 0, 0, 0.09);
+          span {
+            display: block;
+            padding: 15px 40px;
+          }
         }
-      }
-      .txt {
-        font-weight: 300;
-        line-height: 20px;
+        .txt {
+          font-weight: 300;
+          line-height: 20px;
+        }
       }
     }
   }
-}
 
-span::before, span::after{
-  content:"";
-  width:2px;
-  height:0;
-  position: absolute;
-  transition: all 0.2s linear;
-  background: #fff;
-}
-button:hover::before, button:hover::after{
-  width: 100%;
-}
-button:hover span::before, button:hover span::after{
-  height: 100%;
-}
-/*----- button 1 -----*/
-.btn-1::before, .btn-1::after{
-  transition-delay: 0.2s;
-}
-.btn-1 span::before, .btn-1 span::after{
-  transition-delay: 0s;
-}
-.btn-1::before{
-  right: 0;
-  top: 0;
-}
-.btn-1::after{
-  left: 0;
-  bottom: 0;
-}
-.btn-1 span::before{
-  left: 0;
-  top: 0;
-}
-.btn-1 span::after{
-  right: 0;
-  bottom: 0;
-}
-.btn-1:hover::before, .btn-1:hover::after{
-  transition-delay: 0s;
-}
-.btn-1:hover span::before, .btn-1:hover span::after{
-  transition-delay: 0.2s;
-}
+  span::before,
+  span::after {
+    content: "";
+    width: 2px;
+    height: 0;
+    position: absolute;
+    transition: all 0.2s linear;
+    background: #fff;
+  }
+  button:hover::before,
+  button:hover::after {
+    width: 100%;
+  }
+  button:hover span::before,
+  button:hover span::after {
+    height: 100%;
+  }
+  /*----- button 1 -----*/
+  .btn-1::before,
+  .btn-1::after {
+    transition-delay: 0.2s;
+  }
+  .btn-1 span::before,
+  .btn-1 span::after {
+    transition-delay: 0s;
+  }
+  .btn-1::before {
+    right: 0;
+    top: 0;
+  }
+  .btn-1::after {
+    left: 0;
+    bottom: 0;
+  }
+  .btn-1 span::before {
+    left: 0;
+    top: 0;
+  }
+  .btn-1 span::after {
+    right: 0;
+    bottom: 0;
+  }
+  .btn-1:hover::before,
+  .btn-1:hover::after {
+    transition-delay: 0s;
+  }
+  .btn-1:hover span::before,
+  .btn-1:hover span::after {
+    transition-delay: 0.2s;
+  }
 
-
-
-.portfolio {
-  padding-bottom: 300px;
-  background-color: #fff;
-  .portfolio-title {
-    color: #537188;
-    text-align: center;
-    font-size: 50px;
-    @include breakpoint(notebook) {
-      @include font-size(D, 50px);
-    }
-    @include breakpoint(mobile) {
-      @include font-size(M, 30px);
+  .portfolio {
+    padding-bottom: 300px;
+    background-color: #fff;
+    .portfolio-title {
+      color: #537188;
+      text-align: center;
+      font-size: 50px;
+      @include breakpoint(notebook) {
+        @include font-size(D, 50px);
+      }
+      @include breakpoint(mobile) {
+        @include font-size(M, 30px);
+      }
     }
   }
 }
